test/files/pos/t12159/s.scala
// javaVersion: 17+

package p

class S extends L {
}
