test/files/neg/t12159b/s_2.scala
//> using jvm 17+

package p

class S extends I
